--- a/Classification_model.ipynb
+++ b/Classification_model.ipynb
@@ -22,7 +22,7 @@
         "id": "4HkEz7MY_OqT"
       },
       "source": [
-        "# **Building and deploying Machine Learning models**"
+        "# **Building and deploying Classification models using PMML and ONNX**"
       ]
     },
     {
